[gd_scene load_steps=7 format=2]

[ext_resource path="res://ASSETS/blocks/rotating spikes.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/blocks/moving block.png" type="Texture" id=2]
[ext_resource path="res://RotatingSpikePlatform.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/pivot/Block1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -700 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Spikes:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotate"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spikes:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.35, 0.35 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -660, -8, -625, -46, -606, -46, -571, -10, -561, -11, -525, -44, -504, -44, -470, -12, -461, -11, -424, -46, -406, -46, -371, -10, -362, -9, -326, -47, -304, -47, -271, -11, -261, -11, -225, -46, -206, -46, -169, -8, -161, -9, -124, -45, -107, -45, -70, -10, -60, -26, -46, -26, -46, -40, -20, -63, -11, -71, -46, -105, -47, -124, -9, -160, -10, -169, -46, -206, -46, -224, -11, -261, -10, -270, -46, -303, -46, -324, -10, -360, -10, -371, -46, -403, -47, -424, -10, -462, -11, -470, -47, -505, -46, -525, -10, -560, -10, -570, -47, -605, -47, -623, -9, -659, 10, -659, 45, -626, 48, -606, 11, -568, 11, -560, 46, -526, 47, -506, 12, -469, 12, -463, 45, -427, 47, -405, 10, -368, 10, -362, 45, -326, 47, -306, 12, -269, 12, -262, 47, -225, 47, -206, 11, -168, 11, -161, 46, -126, 46, -106, 12, -69, 20, -69, 67, -19, 68, -11, 105, -47, 125, -47, 161, -11, 168, -12, 206, -45, 226, -46, 261, -11, 268, -11, 304, -45, 324, -47, 361, -12, 367, -11, 404, -45, 424, -45, 460, -10, 466, -10, 505, -47, 525, -47, 559, -10, 568, -11, 604, -46, 624, -46, 659, -11, 662, 7, 626, 46, 605, 46, 569, 11, 560, 9, 526, 45, 506, 47, 470, 12, 462, 11, 426, 47, 406, 47, 368, 12, 361, 9, 326, 46, 306, 48, 269, 11, 262, 11, 226, 47, 206, 47, 169, 12, 160, 11, 127, 46, 106, 48, 70, 14, 21, 66, 14, 72, 46, 105, 46, 127, 10, 162, 9, 167, 44, 205, 49, 226, 11, 260, 13, 269, 46, 304, 48, 327, 13, 359, 13, 367, 46, 405, 46, 423, 13, 460, 13, 468, 46, 502, 45, 527, 12, 563, 12, 568, 46, 605, 47, 626, 13, 661, -11, 662, -47, 627, -47, 605, -11, 569, -11, 560, -47, 526, -48, 507, -8, 468, -9, 459, -48, 428, -48, 403, -10, 369, -9, 360, -46, 327, -47, 306, -11, 268, -11, 262, -48, 226, -47, 206, -12, 169, -11, 160, -47, 127, -47, 104, -12, 72, -19, 65, -67, 20, -69, 10, -104, 49, -126, 48, -161, 12, -168, 10, -203, 47, -226, 48, -260, 12, -269, 10, -304, 46, -323, 47, -362, 11, -369, 10, -404, 48, -424, 46, -459, 12, -469, 11, -505, 46, -525, 47, -560, 12, -568, 9, -605, 47, -624, 47, -661, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Spikes" type="Sprite" parent="."]
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/RESET = SubResource( 1 )
anims/rotate = SubResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
scale = Vector2( 1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 4 )

[node name="pivot" type="Node2D" parent="KinematicBody2D/Sprite"]
rotation = 1.74846e-07
scale = Vector2( 5.33333, 5.33333 )

[node name="Block1" type="Sprite" parent="KinematicBody2D/Sprite/pivot"]
position = Vector2( 0, -700 )
texture = ExtResource( 2 )

[node name="Block2" type="Sprite" parent="KinematicBody2D/Sprite/pivot"]
position = Vector2( 700, 0 )
texture = ExtResource( 2 )

[node name="Block3" type="Sprite" parent="KinematicBody2D/Sprite/pivot"]
position = Vector2( 0, 700 )
texture = ExtResource( 2 )

[node name="Block4" type="Sprite" parent="KinematicBody2D/Sprite/pivot"]
position = Vector2( -700, 0 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="KinematicBody2D"]
scale = Vector2( 1, 1 )
polygon = PoolVector2Array( -133, -743, -133, -646, -2, -646, -1, -6, -564, -1, -564, -46, -835, -48, -832, 50, -561, 46, -565, 2, -2, 1, -2, 646, -135, 652, -138, 752, 133, 749, 128, 652, 4, 653, 2, -5, 564, 0, 568, 51, 833, 49, 837, -50, 568, -47, 566, -7, 2, -5, 0, -646, 133, -646, 134, -746 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
